--- a/styles.css
+++ b/styles.css
@@ -184,9 +184,8 @@ button {
 }
 
 .centered {
-  display: 'flex';
-  justify-content: 'center';
-  align-items: 'center';
+  margin-left: 40%;
+  margin-top: 25%;
 }
 
 @media only screen and (max-width: 700px) {
