--- a/styles.css
+++ b/styles.css
@@ -149,17 +149,18 @@ button {
 
 #histories {
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
 }
 
 .card {
-  width: 100%;
+  width: 30%;
   height: 100%;
   padding: 50px;
-  display: flex;
+  /* display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: center; */
   padding: 20px 30px;
   color: white;
   border-radius: 15px;
@@ -188,13 +189,18 @@ button {
   margin-top: 20%;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 576px) {
   .box-container {
     padding: 0 20px;
     width: 100%;
   }
 
   .card {
+    width: 100%;
+    display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
   }
 }
